--- a/app/assets/stylesheets/spacing.css.scss
+++ b/app/assets/stylesheets/spacing.css.scss
@@ -1,3 +1,6 @@
 .mb10{
 	margin-bottom:10px;
 }
+.mt5{
+	margin-top:5px;
+}
